fix horizontal scroll
Added: box-sizing property.
box-sizing: border-box; in CSS includes padding and border in the specified width and height of an element, simplifying layout control.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html {
+  box-sizing: border-box;
+}
+
+* {
+  box-sizing: inherit;
+}
+
 html,
 body {
   margin: 0;
